--- a/src/test/resources/config/remote.properties
+++ b/src/test/resources/config/remote.properties
@@ -1,4 +1,4 @@
-browserName=chrome
-browserVersion=99.0
-browserSize=1920x1080
-browserRemoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
+browser=chrome
+version=99.0
+browserResolution=1920x1080
+remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
